--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "clsx": "1.1.1",
     "feather-icons-react": "^0.5.0",
+    "js-cookie": "^3.0.1",
     "next": "12.0.4",
     "prop-types": "15.7.2",
     "react": "17.0.2",
