--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "11.7.0",
     "@emotion/server": "11.4.0",
     "@emotion/styled": "11.6.0",
+    "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.122",
     "@mui/material": "^5.11.12",
     "@reduxjs/toolkit": "^1.9.3",
