--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "apexcharts": "^3.23.1",
     "axios": "^1.3.4",
+    "ckeditor4-react": "^4.1.2",
     "clsx": "1.1.1",
     "feather-icons-react": "^0.5.0",
     "js-cookie": "^3.0.1",
