--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,12 @@ yarn-error.log*
 
 # Next.js
 /.next
+
+#PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
+
