--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "feather-icons-react": "^0.5.0",
     "js-cookie": "^3.0.1",
     "next": "^13.2.4",
+    "next-pwa": "^5.6.0",
     "prop-types": "15.7.2",
     "react": "18.0.0",
     "react-apexcharts": "^1.3.7",
