--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^3.0.1",
     "next": "^13.2.4",
     "next-pwa": "^5.6.0",
+    "openai": "^3.2.1",
     "prop-types": "15.7.2",
     "react": "18.0.0",
     "react-apexcharts": "^1.3.7",
