--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-apexcharts": "^1.3.7",
     "react-cookie": "^4.1.1",
     "react-dom": "18.0.0",
+    "react-ios-time-picker": "^0.2.2",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.3"
