--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-ios-time-picker": "^0.2.2",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.32.0",
     "sweetalert2": "^11.7.3"
   },
   "scripts": {
