--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "sharp": "^0.32.0",
-    "sweetalert2": "^11.7.3"
+    "sweetalert2": "^11.7.3",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "dev": "next",
